fix: celda-det-sob usa stretch para que Det y Sob se encuadren correctamente

--- a/frontend/src/styles/05-components/_celda-tabla.scss
+++ b/frontend/src/styles/05-components/_celda-tabla.scss
@@ -44,7 +44,7 @@
 
 .celda-det-sob {
   display:     flex;
-  align-items: center;
+  align-items: stretch;
 
   .celda-tabla--body .celda-tabla__texto {
     white-space:     normal;
